@@ -1,3 +1,4 @@
 pyroute2==0.5.2
 pytest==3.10.1
 pytest-xdist==1.26.1
+scapy==2.4.3
